# advent-of-code

./: index.html
2021/: .aocrunner.json  .gitignore  Makefile  README.md  main.swift  package-lock.json  package.json  packet.json  pyproject.toml  readmes.js
2021/src/day01/: README.md  day01.js  day01.py  day01.swift  index.js  index.swift
2021/src/day02/: README.md  day02.js  day02.py  day02.swift  index.js  index.swift
2021/src/day03/: README.md  day03.js  day03.py  day03.swift  index.js  index.swift
2021/src/day04/: README.md  day04.js  day04.py  day04.swift  index.js  index.swift
2021/src/day05/: README.md  day05.js  day05.swift  index.js  index.swift
2021/src/day06/: README.md  day06.js  day06.swift  index.js  index.swift
2021/src/day07/: README.md  day07.js  day07.swift  index.js  index.swift
2021/src/day08/: README.md  day08-solver.js  day08-threads.js  day08-worker.js  day08.js  day08.swift  index.js
2021/src/day09/: README.md  day09-threads.js  day09-worker.js  day09.js  index.js
2021/src/day10/: README.md  day10.js  day10.py  index.js
2021/src/day11/: README.md  day11.js  day11.py  index.js
2021/src/day12/: README.md  day12.js  day12.py
2021/src/day13/: README.md  day13.js  day13.py  index.js
2021/src/day14/: README.md  day14.js  day14.py  index.js
2021/src/day15/: README.md  day15.js  day15.py  index.js
2021/src/day16/: README.md  day16.js  day16.py
2021/src/day17/: README.md  day17.js
2021/src/day18/: README.md  day18-threads.js  day18-worker.js  day18.js  fns.js  index.js
2021/src/day19/: README.md  day19.js  geo.js
(+387 files in other folders)
